Uploder with pv & Increase storage limits

--- a/openshift/configs/nginx.conf
+++ b/openshift/configs/nginx.conf
@@ -11,6 +11,7 @@ server {
 		auth_basic "Welcome to the Jungle!"; #For Basic Auth
     	auth_basic_user_file conf.d/osinstall.htpasswd;  #For Basic Auth
 		deny all;
+		client_max_body_size 20m;
 
 		proxy_set_header  Host $host;
 		proxy_set_header  X-Real-IP $remote_addr;
